[FIX] sign: fix iframe not showing if header too large
Issue

	- Install Sign & Contacts
	- Send a document to sereval person
	  (I didn't find how so I fetched
	   the customer db)
	- Resise your window to have only
	  the header in your scope

	The iframe with the document to sign
	disappears

Cause

	I guess this is because there is a
	volontary "overflow: none" on the whole
	page and overflows are allowed only on the
	elements that we choose.

	So when the header is only in the view,
	the general overflow is hidden.

Solution

	According to EST (on the ticket), they
	had a similar issue on Lunch app and they
	just limited the size of the header in
	order to always have both elements in
	the scope

OPW-2227606

closes odoo/enterprise#10177

X-original-commit: e926a0adcd9350a8641d4227213668b651b438ec

--- a/sign/static/src/scss/sign_common.scss
+++ b/sign/static/src/scss/sign_common.scss
@@ -52,6 +52,11 @@
     }
 
     .row {
+        &.o_sign_page_info {
+            max-height: 33vh;
+            overflow-y: auto;
+        }
+
         > div {
             > .o_page_header, > .alert {
                 margin: 10px 0;
